@@ -1,3 +1,13 @@
+2004-05-12  Per Bothner  <per@bothner.com>
+	    Chris Dean  <Chris.Dean@sokitomi.com>
+
+	New testcase, for checking overload resolution.
+	* MyDate.java:  New class.
+	* MyTimestamp.java:  New class, extends MyDate.
+	* module3.scm (my-compare):  New function, uses MyTimestamp.
+	* Makefile.am:  Update accordingly.
+	* obj-test.scm:  New test, calls my-compare.
+
 2004-05-06  Chris Dean  <Chris.Dean@sokitomi.com>
 
 	* module1a.scm:  New module, uses defmacro.
